--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
     <!-- nav bar -->
     <nav>
       <div id="logo">
-        <img
-          src="./images/u2cw_blacklogo_noName.png"
-          alt="modern school logo"
-        />
+        <a href="./index.html">
+          <img
+            src="./images/u2cw_blacklogo_noName.png"
+            alt="modern school logo"
+          />
+        </a>
+
         <p>MODERN SCHOOL</p>
       </div>
 
       <div id="links">
-        <a href="#">Course</a>
-        <button>Apply Now</button>
+        <a href="./course.html">Course</a>
+        <a href="./course.html">
+          <button>Apply Now</button>
+        </a>
       </div>
     </nav>
     <!-- end of nav bar -->
@@ -40,7 +45,9 @@
           School. Choose your courses, unleash your potential, and pay only for
           what you learn.
         </p>
-        <button>Apply Now</button>
+        <a href="./course.html">
+          <button>Apply Now</button>
+        </a>
       </div>
 
       <div>
