functionalities and media query added to the entire website

--- a/index.html
+++ b/index.html
@@ -40,23 +40,25 @@
 
     <!-- main div for intro -->
     <div id="container-1">
-      <div>
-        <h1>21st Century School</h1>
-        <p>
-          Discover a world of endless learning possibilities at 21st Century
-          School. Choose your courses, unleash your potential, and pay only for
-          what you learn.
-        </p>
-        <a href="./course.html">
-          <button>Apply Now</button>
-        </a>
-      </div>
+      <div class="card">
+        <div>
+          <h1>21st Century School</h1>
+          <p>
+            Discover a world of endless learning possibilities at 21st Century
+            School. Choose your courses, unleash your potential, and pay only
+            for what you learn.
+          </p>
+          <a href="./course.html">
+            <button>Apply Now</button>
+          </a>
+        </div>
 
-      <div>
-        <img
-          src="./images/index_page_studying.jpg"
-          alt="student learning in classroom"
-        />
+        <div>
+          <img
+            src="./images/index_page_studying.jpg"
+            alt="student learning in classroom"
+          />
+        </div>
       </div>
     </div>
     <!-- end of main div for intro -->
@@ -117,22 +119,12 @@
     <!-- Large mid section -->
     <div id="mid-section">
       <div class="wrapper">
-        <!-- <div>
-          <h2>Interactive</h2>
-        </div>
-
-        <div>
-          <h2>Online</h2>
-        </div> -->
-
-        <h2>Interactive</h2>
-
-        <h2>Online</h2>
-
+        <div><h2>Interactive</h2></div>
+        <div><h2>Online</h2></div>
         <div>
           <h2>Less</h2>
-          <img id="gif1" src="./images/mid_section_gif1.gif" alt="" />
-          <img id="gif2" src="./images/mid_section_gif2.gif" alt="" />
+          <img src="./images/mid_section_gif1.gif" alt="" />
+          <img src="./images/mid_section_gif2.gif" alt="" />
           <h2>ns</h2>
         </div>
       </div>
@@ -178,7 +170,7 @@
           </p>
           <p>Dylan</p>
         </div>
-        <div class="cards" data-aos="fade-up" data-aos-duration="10000">
+        <div class="cards">
           <div>
             <img src="./images/review_pic4.jpg" alt="" />
           </div>
@@ -199,23 +191,27 @@
       <div id="contact">
         <p>Got any questions? <a href="#">Contact Us</a></p>
       </div>
+
       <div id="extra">
         <div id="logo">
           <i class="fa-brands fa-instagram" style="color: #ffffff"></i>
           <i class="fa-brands fa-tiktok" style="color: #ffffff"></i>
           <i class="fa-brands fa-youtube" style="color: #ffffff"></i>
         </div>
+
         <div id="terms">
           <p>© 2023</p>
           <p>Privacy Policy</p>
           <p>Terms & Conditions</p>
         </div>
+
         <div id="developer">
           <p>Designed & Developed by <span> Ajeet P</span></p>
         </div>
       </div>
     </footer>
     <!-- end of footer -->
+
     <script src="./scripts/index.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
