worked on media qurery and polished some parts of website

--- a/cart.html
+++ b/cart.html
@@ -10,6 +10,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="icon"
+      type="image/jpeg"
+      href="./images/u2cw_blacklogo_noName.png"
+    />
     <link rel="stylesheet" href="./style.css/cart.css" />
     <title>Modern School - Cart Page</title>
   </head>
