--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="icon"
+      type="image/jpeg"
+      href="./images/u2cw_blacklogo_noName.png"
+    />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./style.css/index.css" />
     <title>Modern School - Home</title>
@@ -65,53 +70,59 @@
 
     <!-- school features carousel  -->
     <div id="wrapper">
-      <!-- left arrow -->
-      <i id="leftArrow" class="fa-solid fa-arrow-left" style="color: white"></i>
-      <div id="carousel">
-        <div class="card">
-          <img src="./images/carousel1.jpg" alt="" />
-          <p>Ignite Curiosity: Fuel your thirst for knowledge</p>
-        </div>
-        <div class="card">
-          <img src="./images/carousel2.jpg" alt="" />
-          <p>Empower Through Choice: Customize your education</p>
-        </div>
-        <div class="card">
-          <img src="./images/carousel3.jpg" alt="" />
-          <p>Break Constraints: Embrace boundless learning</p>
-        </div>
-        <div class="card">
-          <img src="./images/carousel4.jpg" alt="" />
-          <p>Explore New Frontiers: Master emerging fields</p>
-        </div>
-        <div class="card">
-          <img src="./images/carousel5.jpg" alt="" />
-          <p>Inspire Minds, Shape Futures: Cultivate intellectual growth</p>
-        </div>
-        <div class="card">
-          <img src="./images/carousel6.jpg" alt="" />
-          <p>Redefining Learning: Dynamic, immersive education</p>
-        </div>
-        <div class="card">
-          <img src="./images/carousel7.jpg" alt="" />
-          <p>Unlock Potential: Discover hidden talents</p>
-        </div>
-        <div class="card">
-          <img src="./images/carousel8.jpg" alt="" />
-          <p>Get insight into workflow of industry professionals</p>
-        </div>
-        <div class="card">
-          <img src="./images/carousel9.jpg" alt="" />
-          <p>Plan & establish your personal career path</p>
-        </div>
-      </div>
-      <!-- right arrow -->
-      <div id="arrow">
+      <div class="sub-wrapper">
+        <!-- left arrow -->
         <i
-          id="rightArrow"
-          class="fa-solid fa-arrow-right"
+          id="leftArrow"
+          class="fa-solid fa-arrow-left"
           style="color: white"
         ></i>
+        <div id="carousel">
+          <div class="card">
+            <img src="./images/carousel1.jpg" alt="" />
+            <p>Ignite Curiosity: Fuel your thirst for knowledge</p>
+          </div>
+          <div class="card">
+            <img src="./images/carousel2.jpg" alt="" />
+            <p>Empower Through Choice: Customize your education</p>
+          </div>
+          <div class="card">
+            <img src="./images/carousel3.jpg" alt="" />
+            <p>Break Constraints: Embrace boundless learning</p>
+          </div>
+          <div class="card">
+            <img src="./images/carousel4.jpg" alt="" />
+            <p>Explore New Frontiers: Master emerging fields</p>
+          </div>
+          <div class="card">
+            <img src="./images/carousel5.jpg" alt="" />
+            <p>Inspire Minds, Shape Futures: Cultivate intellectual growth</p>
+          </div>
+          <div class="card">
+            <img src="./images/carousel6.jpg" alt="" />
+            <p>Redefining Learning: Dynamic, immersive education</p>
+          </div>
+          <div class="card">
+            <img src="./images/carousel7.jpg" alt="" />
+            <p>Unlock Potential: Discover hidden talents</p>
+          </div>
+          <div class="card">
+            <img src="./images/carousel8.jpg" alt="" />
+            <p>Get insight into workflow of industry professionals</p>
+          </div>
+          <div class="card">
+            <img src="./images/carousel9.jpg" alt="" />
+            <p>Plan & establish your personal career path</p>
+          </div>
+        </div>
+        <!-- right arrow -->
+        <div id="arrow">
+          <i
+            id="rightArrow"
+            class="fa-solid fa-arrow-right"
+            style="color: white"
+          ></i>
+        </div>
       </div>
     </div>
     <!-- end of school features carousel  -->
@@ -135,7 +146,7 @@
     <div id="student-wrapper">
       <h2>Feedback From our <span>Students</span></h2>
       <div id="student-carousel">
-        <div class="cards">
+        <div class="cards" data-aos="fade-up" data-aos-duration="1000">
           <div>
             <img src="./images/review_pic1.jpg" alt="" />
           </div>
@@ -147,7 +158,7 @@
           </p>
           <p>George</p>
         </div>
-        <div class="cards">
+        <div class="cards" data-aos="fade-up" data-aos-duration="1500">
           <div>
             <img src="./images/review_pic2.jpg" alt="" />
           </div>
@@ -158,7 +169,7 @@
           </p>
           <p>Grace</p>
         </div>
-        <div class="cards">
+        <div class="cards" data-aos="fade-up" data-aos-duration="2000">
           <div>
             <img src="./images/review_pic5.jpg" alt="" />
           </div>
@@ -170,7 +181,7 @@
           </p>
           <p>Dylan</p>
         </div>
-        <div class="cards">
+        <div class="cards" data-aos="fade-up" data-aos-duration="2500">
           <div>
             <img src="./images/review_pic4.jpg" alt="" />
           </div>
